--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:alpine
+        image: postgres
         ports:
           - 4444:5432/tcp
         env:
