--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: PHPUnit
         working-directory: apps/${{ env.APP_NAME }}
-        run: phpunit -c tests/phpunit.xml
+        run: vendor/bin/phpunit -c tests/phpunit.xml
 
   mysql:
     runs-on: ubuntu-latest
@@ -132,7 +132,7 @@ jobs:
 
       - name: PHPUnit
         working-directory: apps/${{ env.APP_NAME }}
-        run: phpunit -c tests/phpunit.xml
+        run: vendor/bin/phpunit -c tests/phpunit.xml
 
   pgsql:
     runs-on: ubuntu-latest
